--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,27 @@
       content="Web site created using create-react-app"
     />
 
+    <style>
+      .resize-animation-stopper * {
+        animation: none !important;
+        transition: none !important;
+      }
+    </style>
+
     <title>Carlo | Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      let resizeTimer;
+      window.addEventListener("resize", () => {
+        document.body.classList.add("resize-animation-stopper");
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(() => {
+          document.body.classList.remove("resize-animation-stopper");
+        }, 400);
+      });
+    </script>
   </body>
 </html>
